<resources>
    <string name="ad_key">ca-app-pub-8143059683312810/5512577404</string>
    <string name="ad_key_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_name">English learning</string>
    <string name="english_on_associated">Английский по ассоциациям</string>
    <string name="learn">Учить</string>
    <string name="test">Тест</string>
    <string name="unlock">Разблокировать все уровни и отключить рекламу за $0.99</string>
    <string name="choose_level">Выберите уровень</string>
    <string name="flag_level">Пометить уровень как выученный</string>
    <string name="flag_level_cancel">Пометить уровень как выученный (отменить)</string>
    <string name="take_test">Пройти тест по уровню</string>
    <string name="next">Дальше</string>
    <string name="share">ПОДЕЛИТЬСЯ</string>
    <string name="estimate">ОЦЕНИТЬ В GOOGLE PLAY</string>
    <string name="about_app">О ПРИЛОЖЕНИИ</string>
    <string name="privacy_policy">Политика конфиделницальности</string>
    <string name="navigation_drawer_open">Открыть</string>
    <string name="navigation_drawer_close">Закрыть</string>
    <string name="block_levels_title">Выберите блок уровней</string>
    <string name="block_of_levels_title_2">Тесты для отдельных уровней можно пройти в соответствующих уровнях</string>
    <string name="all_levels">Все уровни</string>
    <string name="learned_only">Только выученные</string>
    <string name="levels">Уровни</string>
    <string name="level">Уровень</string>
    <string name="true_answer">ПРАВИЛЬНО!</string>
    <string name="wrong_answer">НЕВЕРНО!</string>
    <string name="our_result">ВАШ РЕЗУЛЬТАТ:</string>
    <string name="tyr_again">Пройти ещё раз</string>
    <string name="end">Завершить</string>
    <string name="version_text">Версия 1.0 guessthesoundgame@gmail.com</string>
</resources>