<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_guide" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_guide" />

        <TextView
            android:id="@+id/main_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english_on_associated"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textAlignment="center"
            android:fontFamily="@font/comic_sans_ms"
            android:layout_margin="@dimen/main_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end" />

        <Button
            android:id="@+id/learn_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/learn"
            android:fontFamily="@font/comic_sans_ms"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintTop_toBottomOf="@+id/main_text"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:layout_margin="@dimen/main_margin" />

        <Button
            android:id="@+id/test_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:fontFamily="@font/comic_sans_ms"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintTop_toBottomOf="@+id/learn_button"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:layout_margin="@dimen/main_margin" />

        <Button
            android:id="@+id/cancel_advert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/unlock"
            android:fontFamily="@font/comic_sans_ms"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/test_button"
            android:layout_margin="@dimen/main_margin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>