<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="result"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <TextView
            android:id="@+id/our_result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_result"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/main_margin" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{result}"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:layout_margin="@dimen/main_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/our_result_text"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_guide" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_guide" />

        <Button
            android:id="@+id/try_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tyr_again"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintTop_toBottomOf="@+id/result_text"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:layout_marginTop="@dimen/margin_guide"/>


        <Button
            android:id="@+id/end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintTop_toBottomOf="@+id/try_again"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:layout_marginTop="@dimen/margin_guide"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>